[package]
name = "vic-snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.7", features = ["mysql", "tls-rustls", "runtime-tokio"]}
